# Relay

./: .env.example  DESIGN.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: calibrate.py  crossover.py  radix_compare.py  run.py  simulate.py  vllm_validate.py  workload.py
bench/results/: CROSSOVER.md  RADIX.md  RESULTS.md  VLLM_VALIDATION.md  calibration.json  crossover.csv  frontier.csv  vllm_validation.json
dashboards/: relay.json
deploy/compose/: Dockerfile.gateway  Dockerfile.scheduler  Dockerfile.worker  docker-compose.yml  prometheus.yml
deploy/compose/grafana-provisioning/dashboards/: relay.yml
deploy/compose/grafana-provisioning/datasources/: prometheus.yml
deploy/helm/relay/: Chart.yaml  values.yaml
deploy/helm/relay/templates/: _helpers.tpl  gateway.yaml  scheduler.yaml  worker.yaml
deploy/k8s/: hpa.yaml  prometheus-adapter.yaml
deploy/postgres/: init.sql
deploy/redis/: KEYSPACE.md
proto/: buf.gen.yaml  buf.yaml
proto/relay/v1/: worker.proto
relay_core/: hashing.py  metrics.py  queue.py  radix.py  types.py
services/gateway/: app.py  backplane_redis.py  ratelimit.py  schemas.py
services/scheduler/: admission.py  batch_former.py  dispatch.py  grpc_servicer.py  radix_router.py  redis_stream_queue.py  router.py  server.py
services/worker/: harness.py  main.py
services/worker/engines/: cache_aware_mock.py  mock.py  ollama.py  torch_mps.py  vllm.py
tests/chaos/: README.md
tests/integration/: README.md
tests/unit/: test_admission.py  test_batch_former.py  test_cache_engine.py  test_hashing.py  test_mock_engine.py  test_radix_router.py  test_radix_tree.py  test_ratelimit.py  test_router.py  test_workload.py
