[project]
name = "relay"
version = "0.1.0"
description = "GPU inference serving control plane — queue, schedule, batch, place, observe, autoscale, with prefix/KV-cache-aware bounded-load routing."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
# Core deps needed for the in-process benchmark + the algorithmic core (the part
# that runs anywhere, for free). Everything heavier is an optional extra below.
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
# Each extra mirrors one Dockerfile's install set (DESIGN.md §5.1/§5.2/§5.3).
gateway = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "redis>=5.0",
    "asyncpg>=0.29",
    "prometheus-client>=0.20",
    "httpx>=0.27",
]
scheduler = [
    "grpcio>=1.62",
    "grpcio-tools>=1.62",
    "redis>=5.0",
    "asyncpg>=0.29",
    "prometheus-client>=0.20",
    "numpy>=1.26",
    "structlog>=24.1",
]
worker = [
    "grpcio>=1.62",
    "redis>=5.0",
    "prometheus-client>=0.20",
    "numpy>=1.26",
    "httpx>=0.27",
]
# Optional heavy engines, kept separate so the base worker image stays small.
torch = ["torch>=2.2", "transformers>=4.40"]
# vllm is CUDA-only and installed on the rented validation box, not in CI.
bench = ["matplotlib>=3.8", "pandas>=2.2", "scipy>=1.12"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "relay_core",
    "services",
    "services.gateway",
    "services.scheduler",
    "services.worker",
    "services.worker.engines",
    "bench",
]

[tool.pytest.ini_options]
# Unit tests are the default, fast, dependency-free suite (the bench + live
# services have their own heavier requirements).
testpaths = ["tests/unit"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# The proto-edge converters reference generated modules that only exist after
# `make proto`; don't flag those guarded imports.
ignore = ["B008"]
